--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Marina</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,10 +18,10 @@
                     <a href="./index.html">Inicio</a>
                 </li>
                 <li class="menu__item">
-                    <a href="./pages/quienes-somos.html">Quiénes somos</a>
+                    <a href="./Tienda M/Archivos/pages/quienes-somos.html">Quiénes somos</a>
                 </li>
                 <li class="menu__item">
-                    <a href="./pages/contacto.html">Contacto</a>
+                    <a href="./Tienda M/Archivos/pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -58,11 +59,24 @@
             </div>
 
         </section>
+
+
+
+
+
+        <p> sjkfbsdjfbjksdgfjsdfkdsgfg</p>
+
+
+
+
+        
     </main>
     <footer class="pie">
         <p>Todos los derechos reservados</p>
         <p>La Marina</p>
+        <p> Dirrecion: Salta Sur 345</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
