estructura del proyecto

--- a/Tienda M/index.html
+++ b/Tienda M/index.html
@@ -11,17 +11,17 @@
 <body>
 
     <header>
-        <img class="logo" src="./img/logo marina.png" alt="Logo de CarpiViajes">
+        <img class="logo" src="./img/logo marina.png" alt="Logo de la Marina">
         <nav class="navbar">
             <ul class="menu">
                 <li class="menu__item active">
                     <a href="./index.html">Inicio</a>
                 </li>
                 <li class="menu__item">
-                    <a href="./Tienda M/Archivos/pages/quienes-somos.html">Quiénes somos</a>
+                    <a href="./pages/quienes-somos.html">Quiénes somos</a>
                 </li>
                 <li class="menu__item">
-                    <a href="./Tienda M/Archivos/pages/contacto.html">Contacto</a>
+                    <a href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
