--- a/Tienda M/index.html
+++ b/Tienda M/index.html
@@ -63,9 +63,16 @@
 
 
 
-
-        <p> sjkfbsdjfbjksdgfjsdfkdsgfg</p>
-
+    <div class="logo-container">
+        <img src="../Tienda M/img/ariel marca.png" alt="Logo de ariel" class="brand-logo">
+        <img src="../Tienda M/img/ayudin.png" alt="Logo de ayudin" class="brand-logo">
+        <img src="../Tienda M/img/cif-logo.jpg" alt="Logo de ciff" class="brand-logo">
+        <img src="../Tienda M/img/mr musculo marca.png" alt="Logo de mr musculo" class="brand-logo">
+        <img src="../Tienda M/img/off logo.jpg" alt="Logo de off" class="brand-logo">
+        <img src="../Tienda M/img/raid marca.png" alt="Logo de Raid" class="brand-logo">
+        <img src="../Tienda M/img/harpic logo.jpg" alt="Logo de cliff" class="brand-logo">
+        <img src="../Tienda M/img/magistral logo.jpg" alt="Logo de magistral" class="brand-logo">
+    </div>
 
 
 
