css cambios importantes

--- a/Tienda M/index.html
+++ b/Tienda M/index.html
@@ -7,6 +7,7 @@
     <title>La Marina</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
 </head>
 <body>
 
@@ -23,13 +24,19 @@
                 <li class="menu__item">
                     <a href="./pages/contacto.html">Contacto</a>
                 </li>
+                <li class="menu__item">
+                <a href="#" class="fas fa-user"></a>
+                </li>
+                <li class="menu__item" >
+                <a href="#" class="fas fa-shopping-cart"></a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="imagenPrincipal">
-            <h2>Bienvenidos a la Marina</h2>
-            <p>En la Marina ofrecemos diferentes productos de limpieza, higiene y vajilla. Estamos ubicados en Salta Sur 345 en la Ciudad de San Juan.</p>
+            <h2></h2>
+            <p></p>
         </section>
         <section class="tarjetitas">
 
@@ -38,7 +45,7 @@
                 <div class="informacion">
                     <h4 class="tarjetita__titulo">Limpieza</h4>
                     <p class="tarjetita__texto">Un hogar limpio es un hogar feliz. Te ofrecemos soluciones de limpieza eficaces y confiables que te ayudarán a mantener cada rincón impecable sin esfuerzo, para que puedas dedicar tu tiempo a lo que realmente importa.</p>
-                    <button class="tarjetita__boton">Ver más...</button>
+                    <button class="tarjetita__boton">Ver más</button>
                 </div>
             </div>
             <div class="tarjetita tarjetitados">
@@ -46,7 +53,7 @@
                 <div class="informacion">
                     <h4 class="tarjetita__titulo">Vajilla</h4>
                     <p class="tarjetita__texto">Descubre colecciones que transforman cada comida en un momento especial. Desde la elegancia para una cena importante hasta la funcionalidad y color para el día a día, nuestras piezas están diseñadas para crear recuerdos inolvidables alrededor de la mesa.</p>
-                    <button class="tarjetita__boton">Ver más...</button>
+                    <button class="tarjetita__boton">Ver más</button>
                 </div>
             </div>
             <div class="tarjetita tarjetitatres">
@@ -54,7 +61,7 @@
                 <div class="informacion">
                     <h4 class="tarjetita__titulo">higiene</h4>
                     <p class="tarjetita__texto">Porque cuidarte a ti y a los tuyos es lo primero. Explora nuestra línea de productos de higiene, formulados para ofrecerte frescura, protección y una sensación de bienestar que te acompañará durante todo el día.</p>
-                    <button class="tarjetita__boton">Ver más...</button>
+                    <button class="tarjetita__boton">Ver más</button>
                 </div>
             </div>
 
