--- a/Tienda M/index.html
+++ b/Tienda M/index.html
@@ -22,7 +22,7 @@
                     <a href="./pages/quienes-somos.html">Quiénes somos</a>
                 </li>
                 <li class="menu__item">
-                    <a href="./pages/contacto.html">Contacto</a>
+                    <a href="./pages/contacto.html">Contactos</a>
                 </li>
                 <li class="menu__item">
                 <a href="#" class="fas fa-user"></a>
